fix spacing

--- a/src/components/sections/HalfCarousel/HalfCarousel.module.css
+++ b/src/components/sections/HalfCarousel/HalfCarousel.module.css
@@ -7,7 +7,7 @@
 }
 
 .phrases {
-  @apply text-lg text-primary-600 font-semibold uppercase pt-8 pb-8;
+  @apply text-lg text-primary-600 font-semibold uppercase pt-8 pb-12;
 }
 
 .business-pre {
@@ -15,7 +15,7 @@
 }
 
 .business {
-  @apply text-2xl text-primary-600 font-bold uppercase;
+  @apply text-4xl text-primary-600 font-bold uppercase;
 }
 
 .side h3 {
